# fabricator

./: .gitignore  Cargo.toml  LICENSE-MIT  LICENSE-MIT-0  README.md  flake.nix  luac.out  test.lua
.helix/: config.toml  languages.toml
benches/: scripts.rs  vm_speed_test.rs
benches/scripts/: simple_integer_sum.fml
crates/cli/: Cargo.toml
crates/cli/benches/: scripts.rs
crates/cli/benches/scripts/: simple_integer_sum.fml
crates/cli/tests/: scripts.rs  vm_hook.rs
crates/cli/tests/scripts/: arguments.gml  arrays.fml  assign_ops.fml  bin_ops.fml  block_scope.fml  closure_uniqueness.fml  closures.fml  constructors.gml  dead_code_inf_loop.fml  default_args.fml  empty_blocks.fml  empty_statements.gml  enums.fml  function_stmt.fml  function_stmt.gml  global.fml  globalvar.gml  if_then_else.fml  init_scope.fml  is_nan.gml  lexical_scope.fml  loops.gml  macros.fml  methods.fml  no_block_scope.gml  no_closures.gml  no_lexical_scope.gml  numbers.gml  ops.fml  other.gml  short_circuit.fml  simple_function.fml  simple_integer_sum.fml  simple_object.fml  statics.fml  stdlib_struct.fml  structs.fml  switch.gml  try_catch.gml  with.gml
crates/collision/: Cargo.toml
crates/collision/src/: bound_box_tree.rs  gjk.rs  lib.rs  projection.rs  simplex.rs  support.rs  support_ext.rs  support_maps.rs  tests.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: ast.rs  compile.rs  compiler.rs  constant.rs  enums.rs  exports.rs  frontend.rs  ir.rs  ir_gen.rs  lexer.rs  lib.rs  line_numbers.rs  macros.rs  magic_dict.rs  parser.rs  preprocessing.rs  preprocessor.rs  string_interner.rs  tokens.rs
crates/compiler/src/analysis/: block_merge.rs  block_simplification.rs  cleanup.rs  constant_folding.rs  dead_code_elim.rs  eliminate_copies.rs  instruction_liveness.rs  mod.rs  narrow_instructions.rs  nested_scope_liveness.rs  scope_liveness.rs  shadow_liveness.rs  shadow_reduction.rs  simplify_branch_conditions.rs  simplify_branches.rs  ssa_conversion.rs  types_and_effects.rs  variable_liveness.rs  vec_change_set.rs  verify_arguments.rs  verify_references.rs  verify_scopes.rs  verify_upvars.rs
crates/compiler/src/code_gen/: generate.rs  heap_alloc.rs  mod.rs  prototype.rs  register_alloc.rs  upsilon_reachability.rs
crates/compiler/src/codegen/: generate.rs  heap_alloc.rs  register_alloc.rs  upsilon_reachability.rs
crates/compiler/src/graph/: dfs.rs  dominators.rs  predecessors.rs
crates/compiler/src/proto_gen/: generate.rs  heap_alloc.rs  mod.rs  register_alloc.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: geometry.rs  lib.rs  pipeline.rs  shader.wgsl
crates/fabricator/: Cargo.toml
crates/fabricator/src/: ffi.rs  game.rs  lib.rs  maxrects.rs  project.rs  root.rs  state.rs  strip_json_trailing_commas.rs  userdata.rs
crates/fabricator/src/api/: asset.rs  assets.rs  collision.rs  drawing.rs  font.rs  id_user_data.rs  instance.rs  layer.rs  magic.rs  mod.rs  object.rs  os.rs  platform.rs  room.rs  sound.rs  stub.rs  tile.rs  userdata.rs
crates/fabricator/src/game/: create.rs  maxrects.rs  mod.rs  tick.rs
crates/fabricator/src/project/: loading.rs  mod.rs
crates/fabricator/src/state/: configuration.rs  create.rs  drawing.rs  event.rs  input.rs  instance.rs  mod.rs  state.rs  update.rs
crates/interpreter/: Cargo.toml
crates/interpreter/src/: any.rs  bytecode.rs  error.rs  lib.rs  value.rs
crates/math/: Cargo.toml
crates/math/src/: aabox.rs  affine.rs  cast.rs  lib.rs  matrix.rs  vector.rs
crates/stdlib/: Cargo.toml
crates/stdlib/src/: array.rs  buffer.rs  core.rs  ds_grid.rs  ds_list.rs  ds_map.rs  ds_priority.rs  json.rs  lib.rs  math.rs  os.rs  string.rs  testing.rs  util.rs
crates/util/: Cargo.toml
crates/util/src/: bit_containers.rs  freeze.rs  id_map.rs  index_containers.rs  lib.rs  typed_id_map.rs
crates/vm/: Cargo.toml
crates/vm/src/: any.rs  array.rs  builtins.rs  bytecode.rs  callback.rs  closure.rs  conversion.rs  debug.rs  error.rs  instructions.rs  interpreter.rs  lib.rs  magic.rs  object.rs  registry.rs  stack.rs  stash.rs  string.rs  thread.rs  user_data.rs  userdata.rs  value.rs  vec_end_slice.rs
crates/vm/src/error/: mod.rs  raw_gc.rs  runtime_error.rs
crates/vm/src/instructions/: bytecode.rs  instruction.rs  mod.rs
crates/vm/src/thread/: dispatch.rs  (+5 more)
crates/yy-format/: Cargo.toml
crates/yy-format/src/: lib.rs  serde.rs  value.rs
examples/: interpreter.rs
samples/animation-test/: animation-test.yyp
samples/collision-test/: collision-test.yyp
samples/instance-test/: instance-test.yyp
samples/movement-test/: movement-test.yyp
samples/room-test/: room-test.yyp
samples/scripts-test/: scripts-test.yyp
samples/tilemap-test/: tilemap-test.yyp
src/: array.rs  bit_vec.rs  bytecode.rs  callback.rs  char_reader.rs  closure.rs  constant.rs  context.rs  instructions.rs  interpreter.rs  lexer.rs  lib.rs  magic.rs  object.rs  ops.rs  parser.rs  prototype.rs  registry.rs  stack.rs  stash.rs  string.rs  thread.rs  userdata.rs  value.rs
src/compiler/: codegen.rs  compile.rs  compiler.rs  constant.rs  dominators.rs  frontend.rs  ir.rs  lexer.rs  mod.rs  parser.rs  string_interner.rs
src/compiler/analysis/: block_liveness.rs  block_merge.rs  cleanup.rs  constant_folding.rs  dead_code_elim.rs  eliminate_copies.rs  instruction_liveness.rs  mod.rs  remove_dead_upsilons.rs  shadow_liveness.rs  shadow_reduction.rs  ssa_conversion.rs  variable_liveness.rs  vec_change_set.rs  verify.rs  verify_vars.rs
src/compiler/codegen/: generate.rs  heap_alloc.rs  mod.rs  register_alloc.rs  upsilon_reach.rs  upsilon_reachability.rs  verify_ir.rs
src/compiler/graph/: dfs.rs  dominators.rs  mod.rs  predecessors.rs
src/compiler/optimization/: verify.rs
src/util/: bit_containers.rs  bitvec.rs  id_map.rs  index_containers.rs  mod.rs  typed_id_map.rs
tests/: scripts.rs  test_callback.rs  test_code.rs  test_ir.rs  test_vm.rs
tests/scripts/: arrays.fml  bin_ops.fml  bin_ops.gml  closure.fml  closure_uniqueness.fml  closures.fml  empty_blocks.fml  if_then_else.fml  if_then_else.gml  no_closures.gml  no_lexical_scope.gml  simple_function.fml
(+62 files in other folders)
