[workspace]
resolver = "2"
members = [
    "crates/*",
]
default-members = [
    "crates/*",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
arrayvec = "0.7"
bitflags = "2.9"
clap = { version = "4.5", features = ["derive"] }
either = "1.0"
gc-arena = { git = "https://github.com/kyren/gc-arena", rev = "cef6db5e15bdf27f3c85b83ec0455431f134d2f0" }
log = "0.4"
num = "0.4"
rand = "0.9"
rayon = "1.1"
rustc-hash = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

fabricator-compiler.path = "crates/compiler"
fabricator-collision.path = "crates/collision"
fabricator-math.path = "crates/math"
fabricator-stdlib.path = "crates/stdlib"
fabricator-util.path = "crates/util"
fabricator-vm.path = "crates/vm"
fabricator.path = "crates/fabricator"
