[workspace]
resolver = "2"
members = [
    "crates/*",
]
default-members = [
    "crates/*",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR CC0-1.0 OR MIT-0"

[workspace.dependencies]
anyhow = "1.0"
arrayvec = "0.7"
bitflags = "2.11"
clap = { version = "4.5", features = ["derive"] }
either = "1.0"
gc-arena = { git = "https://github.com/kyren/gc-arena", rev = "75671ae03f53718357b741ed4027560f14e90836" }
image = { version = "0.25", default-features = false, features = ["png"] }
log = "0.4"
num = "0.4"
rand = "0.10"
rayon = "1.1"
rustc-hash = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

fabricator-compiler.path = "crates/compiler"
fabricator-collision.path = "crates/collision"
fabricator-math.path = "crates/math"
fabricator-stdlib.path = "crates/stdlib"
fabricator-util.path = "crates/util"
fabricator-vm.path = "crates/vm"
fabricator.path = "crates/fabricator"
