[package]
name = "fabricator-cli"
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
gc-arena.workspace = true

fabricator-compiler.workspace = true
fabricator-stdlib.workspace = true
fabricator-util.workspace = true
fabricator-vm.workspace = true
fabricator.workspace = true

[dev-dependencies]
criterion = "0.6"

[[bench]]
name = "scripts"
harness = false
