[package]
name = "fabricator-cli"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
gc-arena.workspace = true
rustyline = "18"

fabricator-compiler.workspace = true
fabricator-stdlib.workspace = true
fabricator-util.workspace = true
fabricator-vm.workspace = true
fabricator.workspace = true

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "scripts"
harness = false
