[package]
name = "fabricator"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
gc-arena.workspace = true
num.workspace = true
serde.workspace = true
thiserror.workspace = true

fabricator-compiler.workspace = true
fabricator-math.workspace = true
fabricator-stdlib.workspace = true
fabricator-util.workspace = true
fabricator-vm.workspace = true
fabricator-yy-format.workspace = true

[dev-dependencies]
rand.workspace = true
