[package]
name = "fabricator"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bitflags.workspace = true
gc-arena.workspace = true
image.workspace = true
libloading = "0.8"
log.workspace = true
num.workspace = true
rand.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
thiserror.workspace = true

fabricator-collision.workspace = true
fabricator-compiler.workspace = true
fabricator-math.workspace = true
fabricator-stdlib.workspace = true
fabricator-util.workspace = true
fabricator-vm.workspace = true

[dev-dependencies]
rand.workspace = true
